fix styles breakpoints and improve gaps

--- a/src/components/molecules/EventCard/event-card.scss
+++ b/src/components/molecules/EventCard/event-card.scss
@@ -9,7 +9,6 @@ $_color-lynch: #627485;
     display: flex;
     flex-direction: column;
     margin-top: 48px;
-    max-width: 384px;
     min-width: 248px;
     padding: 16px 16px 0;
     position: relative;
