--- a/src/components/molecules/NewsFeedCard/news-feed-card.scss
+++ b/src/components/molecules/NewsFeedCard/news-feed-card.scss
@@ -7,7 +7,6 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
-    max-width: 416px;
     text-transform: uppercase;
 }
 
