--- a/src/components/molecules/ReservationsSection/reservations-section.scss
+++ b/src/components/molecules/ReservationsSection/reservations-section.scss
@@ -17,8 +17,8 @@ $inherit: inherit;
     &__element-container {
         @include section-responsiveness;
 
-        @media (max-width: 1050px) {
-            grid-gap: 40px 25px;
+        @media (max-width: 1050px) and (min-width: 680px) {
+            grid-row-gap: 40px;
         }
     }
 
