--- a/src/components/organisms/NewsFeedSection/news-feed-section.scss
+++ b/src/components/organisms/NewsFeedSection/news-feed-section.scss
@@ -6,15 +6,36 @@
 }
 
 .news-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 10px;
+    display: grid;
+    grid-auto-rows: 40px;
+    grid-gap: 35px 48px;
+    grid-template-columns: repeat(3, minmax(280px, 1fr));
+    transition: 0.4s;
 
     &__header {
         font-size: $font-size-large;
         font-weight: $font-weight-heavy;
         line-height: 32px;
         text-align: left;
+    }
+
+    @media (max-width: 1050px) {
+        grid-auto-rows: 40px;
+        grid-template-columns: repeat(2, minmax(280px, 1fr));
+    }
+
+    @media (max-width: 680px) {
+        grid-gap: 30px;
+        grid-template-columns: 1fr;
+        margin: auto;
+        max-width: 416px;
+    }
+
+    &__event-card {
+        grid-row-end: span 6;
+    }
+
+    &__post-card {
+        grid-row-end: span 10;
     }
 }
