--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -14,12 +14,12 @@
 
 @mixin section-responsiveness() {
     display: grid;
-    grid-gap: 50px;
+    grid-gap: 48px;
     grid-template-areas: 'a1 a2 a3';
     grid-template-columns: repeat(3, 1fr);
     transition: 0.4s;
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1050px) {
         grid-template-areas: 'a1 a1 a1 a1 a1 a1 a2 a2 a2 a2 a2 a2' '. . . b b b b b b . . .';
         grid-template-columns: repeat(12, 1fr);
 
